# machinery

./: .gitignore  Cargo.toml  README.md
demo/: Cargo.toml  build.rs  test-node.js
demo/bindings/: index.ts
demo/src/: main.rs  user.rs
demo/src/api/: greeting.rs
machinery/: Cargo.toml
machinery-build/: Cargo.toml
machinery-build/src/: analyzer.rs  lib.rs  pipeline.rs
machinery-meta/: Cargo.toml
machinery-meta/src/: lib.rs
machinery/src/: context.rs  inject.rs  lib.rs  machinery.rs
