[workspace]
resolver = "2"
members = [
    "machinery-meta",
    "machinery-build",
    "machinery",
    "demo"
]
default-members = [
    "demo"
]

# [dependencies]
# bincode = "1.3.3"
# async-trait = "0.1.68"
# serde = { version = "1.0.163", features = ["derive"] }
# machinery-meta = { path = "./machinery-meta" }
# machinery-build = { path = "./machinery-build" }
# # tokio = "1.28.2"
# # serde_json = "1.0.96"
#
# [build-dependencies]
# syn = { version="2.0.16", features = ["full"]}
#
