[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[features]
lambda = ["machinery/lambda"] # for us but also for machinery

[dependencies]
machinery = { path = "../machinery" }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164" }
log = "0.4.19"
env_logger = "0.10.0"

[build-dependencies]
machinery-build = { path = "../machinery-build" }

