[package]
name = "machinery"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
serde_json = { version = "1.0" }
axum = "0.6.18"
machinery-meta = { path = "../machinery-meta" }


